<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:elevation="3dp"
    android:layout_height="match_parent"
    android:background="#3E419E"
    tools:context=".main.MainActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_bold"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:text="@string/indo_label"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:contentDescription="@string/info_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:weightSum="1"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:weightSum="1"
        android:layout_marginTop="60dp"
        android:id="@+id/first_container"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/corona_label"
            android:layout_weight="0.4"
            android:id="@+id/covid_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/virus"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent" />


        <LinearLayout
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_weight="0.6"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/covid_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/loading"

                android:textColor="@android:color/white"
                android:textSize="42sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/covid_logo"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/karla"
                android:text="@string/total_cases"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="@+id/covid_total"
                app:layout_constraintStart_toStartOf="@+id/covid_total"
                app:layout_constraintTop_toBottomOf="@id/covid_total" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_container"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_container">


        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:weightSum="3">


            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_box"
                android:backgroundTint="#52B2D0"
                android:elevation="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_positive_case"
                    android:fontFamily="@font/rubik_bold"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textAlignment="center" />

                <TextView
                    android:fontFamily="@font/karla"
                    android:textSize="14sp"
                    android:textColor="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/positive_heading"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:backgroundTint="#68C166"
                android:background="@drawable/rounded_box"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_recovered_case"
                    android:fontFamily="@font/rubik_bold"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textAlignment="center" />


                <TextView
                    android:fontFamily="@font/karla"
                    android:textSize="14sp"
                    android:textColor="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered_heading"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:backgroundTint="#E76666"
                android:background="@drawable/rounded_box"
                android:gravity="center"
                android:elevation="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_death_case"
                    android:fontFamily="@font/rubik_bold"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textAlignment="center" />

                <TextView
                    android:fontFamily="@font/karla"
                    android:textSize="14sp"
                    android:textColor="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/death_heading"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/know_more_heading"
            android:fontFamily="@font/rubik_bold"
            android:textSize="18sp"
            android:textColor="#25287A" />

        <LinearLayout
            android:id="@+id/lookup_view"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_box"
            android:gravity="center"
            android:backgroundTint="#EEEEFF"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:contentDescription="@string/globe_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/globe" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:textColor="#25287A"
                    android:textSize="16sp"
                    android:fontFamily="@font/rubik_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/look_up_headiing" />

                <TextView
                    android:textColor="#71728C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_heading" />
            </LinearLayout>

            <ImageView
                android:contentDescription="@string/arrow_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/arrow" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hotline_view"
            android:backgroundTint="#EEEEFF"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_box"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:contentDescription="@string/sirine"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/alert" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:textColor="#25287A"
                    android:textSize="16sp"
                    android:fontFamily="@font/rubik_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotline_label" />

                <TextView
                    android:textColor="#71728C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emergency_heading" />
            </LinearLayout>

            <ImageView
                android:contentDescription="@string/arrow_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/arrow" />

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>